# correspondence-analysis

./: .gitignore  README.md  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: correspondence-analysis-package.yml
src/: base.py  contingency_table.py  correspondence_analysis.py  reports.py  types.py  visualization.py
src/correspondence/: base.py  correspondence_analysis.py
src/multidimensional_scaling/: errors.py  metric_multidimensional_scaling.py
style/: table.css
tests/: conftest.py  test_contingency_table.py  test_correspondence_analysis.py  test_reports.py
tests/test_correspondence/: test_correspondence_analysis.py
tests/test_multidimensional_scaling/: test_metric_multidimensional_scaling.py
