[tool.poetry]
name = "correspondence-analysis"
version = "0.1.0"
description = "Python implementation of correspondence analysis."
authors = ["Luis Gustavo Santos Barros"]
license = "Mozilla Public License Version 2.0"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "1.23.0"
scipy = "1.8.0"
pandas = "1.4.2"
statsmodels = "0.13.2"
matplotlib = "^3.5.2"
ipython = "^8.4.0"
scikit-learn = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pylint = "^2.14.3"
black = "^22.3.0"
flake8 = "^4.0.1"
beautifulsoup4 = "^4.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
